# MES-LshapedDomain

./: LShape.cabal  README.md
app/: Main.hs
src/: LShapeSolver.hs  OldForTestSolver.hs
test/: Spec.hs
