name:                LshapedDomain
version:             0.1.0.0
synopsis:            Project for Differential Equations Course and for Functional Programming Course at AGH UST.
description:         Please see README.md
homepage:            https://github.com/Fapfood/MES-LshapedDomain#readme
license:             MIT
license-file:        LICENSE
author:              Fapfood
maintainer:          fapfood@gmail.com
copyright:           2017 Fapfood
category:            MES
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     LShapeSolver
                     , Matrix.LU
                     , Matrix.Matrix
                     , OldForTestSolver
  build-depends:       base >= 4.7 && < 5
                     , array == 0.5.1.1
  default-language:    Haskell2010

executable LShape-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , LShape
  default-language:    Haskell2010

test-suite LShape-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , LShape
                     , HUnit
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Fapfood/MES-LshapedDomain
